@@ -108,11 +108,11 @@ public class WorkQueueManager implements UDPSelectorMonitor {
         this.selector = Selector.open();
         // TODO use doPriv checks for Java2 security (like TCP)
         this.selectorTask = new SelectorTask();
-        this.selectorThread = new Thread(selectorTask);
+        this.selectorThread = Thread.ofVirtual().unstarted(selectorTask);
         this.selectorThread.setName("UDP WorkQueueManager Thread:" + numWorkerThreads.incrementAndGet());
         this.selectorThread.setDaemon(true);
         this.selectorThread.start();
-        this.selectorThreadId = selectorThread.getId();
+        this.selectorThreadId = selectorThread.threadId();
 
         String value = (String) udpFactory.getProperties().get("numReceivesBeforeNewWorker");
         if (value != null && 0 < value.length()) {
@@ -217,7 +217,7 @@ public class WorkQueueManager implements UDPSelectorMonitor {
         synchronized (channelRequestingToBeAddedRemovedSync) {
             channelRequestingToBeAddedRemoved = true;
         }
-        if (Thread.currentThread().getId() != selectorThreadId) {
+        if (Thread.currentThread().threadId() != selectorThreadId) {
             selector.wakeup();
             if (TraceComponent.isAnyTracingEnabled() && tc.isDebugEnabled()) {
                 Tr.debug(this, tc, "selector.wakeup() for selector " + selector.hashCode());
@@ -605,7 +605,7 @@ public class WorkQueueManager implements UDPSelectorMonitor {
                                         if (TraceComponent.isAnyTracingEnabled() && tc.isDebugEnabled()) {
                                             Tr.debug(WorkQueueManager.this, tc, "Starting worker thread from WQM: " + attachment.getNumThreadsProcessing());
                                         }
-                                        MultiThreadedWorker worker = getMultiThreadedWorker(key, Thread.currentThread().getId());
+                                        MultiThreadedWorker worker = getMultiThreadedWorker(key, Thread.currentThread().threadId());
                                         dispatchWorker(worker);
                                     } else {
                                         //
